@@ -116,6 +116,10 @@ API Changes
   and a separate Sort for ordering of children within a block. 
   (Robert Muir, Mike McCandless, Adrien Grand)
 
+* LUCENE-5516: MergeScheduler#merge() now accepts a MergeTrigger as well as
+  a boolean that indicates if a new merge was found in the caller thread before
+  the scheduler was called. (Simon Willnauer)
+
 Optimizations
 
 * LUCENE-5468: HunspellStemFilter uses 10 to 100x less RAM. It also loads
